--- a/application/components/css_variable_reference_tracker.ipynb
+++ b/application/components/css_variable_reference_tracker.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "2337f2ad-7007-4d57-ad38-8bfbda6d0991",
    "metadata": {},
    "outputs": [
@@ -16,73 +16,79 @@
       "--breakpoint-md: 768px\n",
       "--breakpoint-sm: 640px\n",
       "--breakpoint-xl: 1280px\n",
-      "--button-primary-hover: var(--color-action-primary-hover)\n",
-      "--button-primary-surface: var(--color-action-primary)\n",
-      "--button-primary-text: var(--color-text-inverse)\n",
-      "--button-secondary-hover: var(--color-surface-tertiary)\n",
-      "--button-secondary-surface: var(--color-surface-secondary)\n",
-      "--button-secondary-text: var(--color-text-primary)\n",
-      "--color-action-primary: var(--color-blue-500)\n",
-      "--color-action-primary-hover: var(--color-blue-600)\n",
-      "--color-action-secondary: var(--color-gray-500)\n",
-      "--color-action-secondary-hover: var(--color-gray-600)\n",
-      "--color-background-inverse: var(--color-gray-900)\n",
       "--color-background-primary: var(--color-white)\n",
       "--color-background-secondary: var(--color-gray-50)\n",
       "--color-background-tertiary: var(--color-gray-100)\n",
       "--color-black: #000000\n",
+      "--color-black-rgb: 0, 0, 0\n",
       "--color-blue-100: #d9e3f5\n",
+      "--color-blue-100-rgb: 217, 227, 245\n",
       "--color-blue-50: #f0f4fa\n",
+      "--color-blue-50-rgb: 240, 244, 250\n",
       "--color-blue-500: #3C5A99\n",
+      "--color-blue-500-rgb: 60, 90, 153\n",
       "--color-blue-600: #2563eb\n",
+      "--color-blue-600-rgb: 37, 99, 235\n",
       "--color-border-default: var(--color-gray-300)\n",
       "--color-border-inverse: var(--color-gray-700)\n",
       "--color-border-strong: var(--color-gray-400)\n",
       "--color-border-weak: var(--color-gray-200)\n",
       "--color-danger-50: #f8d7da\n",
+      "--color-danger-50-rgb: 248, 215, 218\n",
       "--color-danger-500: #dc3545\n",
+      "--color-danger-500-rgb: 220, 53, 69\n",
       "--color-danger-600: #dc2626\n",
+      "--color-danger-600-rgb: 220, 38, 38\n",
       "--color-gray-100: #f1f3f5\n",
+      "--color-gray-100-rgb: 241, 243, 245\n",
       "--color-gray-200: #e9ecef\n",
+      "--color-gray-200-rgb: 233, 236, 239\n",
       "--color-gray-300: #dee2e6\n",
+      "--color-gray-300-rgb: 222, 226, 230\n",
       "--color-gray-400: #ced4da\n",
+      "--color-gray-400-rgb: 206, 212, 218\n",
       "--color-gray-50: #f8f9fa\n",
+      "--color-gray-50-rgb: 248, 249, 250\n",
       "--color-gray-500: #adb5bd\n",
+      "--color-gray-500-rgb: 173, 181, 189\n",
       "--color-gray-600: #6c757d\n",
+      "--color-gray-600-rgb: 108, 117, 125\n",
       "--color-gray-700: #495057\n",
+      "--color-gray-700-rgb: 73, 80, 87\n",
       "--color-gray-800: #343a40\n",
+      "--color-gray-800-rgb: 52, 58, 64\n",
       "--color-gray-900: #212529\n",
+      "--color-gray-900-rgb: 33, 37, 41\n",
       "--color-state-active: rgba(var(--color-gray-600-rgb), 0.2)\n",
       "--color-state-focus: rgba(var(--color-blue-500-rgb), 0.2)\n",
       "--color-state-hover: rgba(var(--color-gray-500-rgb), 0.1)\n",
       "--color-state-selected: var(--color-blue-50)\n",
-      "--color-status-danger: var(--color-danger-600)\n",
-      "--color-status-danger-subtle: var(--color-danger-50)\n",
-      "--color-status-success: var(--color-success-600)\n",
-      "--color-status-success-subtle: var(--color-success-50)\n",
-      "--color-status-warning: var(--color-warning-500)\n",
-      "--color-status-warning-subtle: var(--color-warning-50)\n",
       "--color-success-50: #d4edda\n",
+      "--color-success-50-rgb: 212, 237, 218\n",
       "--color-success-500: #28a745\n",
+      "--color-success-500-rgb: 40, 167, 69\n",
       "--color-success-600: #059669\n",
+      "--color-success-600-rgb: 5, 150, 105\n",
       "--color-surface-brand: var(--color-blue-500)\n",
       "--color-surface-inverse: var(--color-gray-800)\n",
       "--color-surface-primary: var(--color-white)\n",
       "--color-surface-secondary: var(--color-gray-50)\n",
       "--color-surface-tertiary: var(--color-gray-100)\n",
       "--color-text-brand: var(--color-blue-500)\n",
+      "--color-text-default: var(--color-gray-900)\n",
       "--color-text-inverse: var(--color-white)\n",
       "--color-text-muted: var(--color-gray-500)\n",
-      "--color-text-primary: var(--color-gray-900)\n",
       "--color-text-secondary: var(--color-gray-600)\n",
       "--color-warning-50: #fff3cd\n",
+      "--color-warning-50-rgb: 255, 243, 205\n",
       "--color-warning-500: #ffd700\n",
+      "--color-warning-500-rgb: 255, 215, 0\n",
       "--color-white: #ffffff\n",
-      "--container-lg: 960px\n",
-      "--container-md: 720px\n",
-      "--container-sm: 100%\n",
-      "--container-xl: 1140px\n",
-      "--font-family-base: Arial, -apple-system, BlinkMacSystemFont, system-ui, sans-serif\n",
+      "--color-white-rgb: 255, 255, 255\n",
+      "--container-max-width-lg: 1024px\n",
+      "--container-max-width-md: 768px\n",
+      "--container-max-width-sm: 640px\n",
+      "--container-max-width-xl: 1280px\n",
       "--font-family-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, monospace\n",
       "--font-family-sans: Arial, -apple-system, system-ui, sans-serif\n",
       "--font-size-base: 1rem\n",
@@ -95,14 +101,11 @@
       "--font-weight-medium: 500\n",
       "--font-weight-regular: 400\n",
       "--font-weight-semibold: 600\n",
-      "--input-border: var(--color-border-weak)\n",
-      "--input-border-focus: var(--color-action-primary)\n",
-      "--input-surface: var(--color-surface-primary)\n",
-      "--input-surface-disabled: var(--color-surface-secondary)\n",
       "--line-height-base: 1.5\n",
       "--line-height-relaxed: 1.75\n",
       "--line-height-tight: 1.25\n",
       "--navbar-border: var(--color-border-inverse)\n",
+      "--navbar-height: 56px\n",
       "--navbar-surface: var(--color-surface-inverse)\n",
       "--navbar-text: var(--color-text-inverse)\n",
       "--radius-full: 9999px\n",
@@ -114,7 +117,8 @@
       "--shadow-sm: 0 1px 2px 0 rgb(0 0 0 / 0.05)\n",
       "--sidebar-border: var(--color-border-weak)\n",
       "--sidebar-surface: var(--color-surface-primary)\n",
-      "--sidebar-text: var(--color-text-primary)\n",
+      "--sidebar-text: var(--color-text-default)\n",
+      "--sidebar-width: 400px\n",
       "--space-1: 0.25rem\n",
       "--space-2: 0.5rem\n",
       "--space-3: 0.75rem\n",
@@ -122,39 +126,22 @@
       "--space-5: 1.5rem\n",
       "--space-6: 2rem\n",
       "--space-8: 3rem\n",
-      "--spacing-inline-lg: var(--space-6)\n",
-      "--spacing-inline-md: var(--space-4)\n",
-      "--spacing-inline-sm: var(--space-2)\n",
-      "--spacing-inset-lg: var(--space-6)\n",
-      "--spacing-inset-md: var(--space-4)\n",
-      "--spacing-inset-sm: var(--space-2)\n",
-      "--spacing-stack-lg: var(--space-6)\n",
-      "--spacing-stack-md: var(--space-4)\n",
-      "--spacing-stack-sm: var(--space-2)\n",
       "--table-border: var(--color-border-weak)\n",
-      "--table-cell-bg: var(--color-surface-secondary)\n",
       "--table-cell-height: 2rem\n",
-      "--table-cell-padding-x: var(--spacing-inset-sm)\n",
-      "--table-cell-padding-y: var(--spacing-inset-sm)\n",
-      "--table-cell-text: var(--color-text-primary)\n",
       "--table-data-col-width: 5rem\n",
       "--table-font-size: var(--font-size-sm)\n",
-      "--table-header-bg: var(--color-surface-brand)\n",
-      "--table-header-font-weight: var(--font-weight-semibold)\n",
       "--table-header-height: 2.5rem\n",
-      "--table-header-padding: var(--space-2) var(--space-3)\n",
-      "--table-header-text: var(--color-text-inverse)\n",
-      "--table-highlight-bg: var(--color-surface-secondary)\n",
       "--table-insurer-col-width: 12rem\n",
       "--table-number-col-width: 4rem\n",
-      "--table-qtoq-bg: var(--color-surface-secondary)\n",
+      "--table-scrollbar-thumb: var(--color-gray-400)\n",
+      "--table-scrollbar-track: var(--color-gray-200)\n",
       "--table-state-hover: var(--color-state-hover)\n",
       "--table-state-selected: var(--color-state-selected)\n",
-      "--table-surface-alternate: var(--color-surface-tertiary)\n",
+      "--table-surface-alternate: var(--color-surface-secondary)\n",
       "--table-surface-cell: var(--color-surface-primary)\n",
       "--table-surface-header: var(--color-surface-brand)\n",
       "--table-surface-highlight: var(--color-surface-secondary)\n",
-      "--table-text-cell: var(--color-text-primary)\n",
+      "--table-text-cell: var(--color-text-default)\n",
       "--table-text-header: var(--color-text-inverse)\n",
       "--table-text-secondary: var(--color-text-secondary)\n",
       "--transition-duration-base: 300ms\n",
@@ -171,23 +158,23 @@
       "\n",
       "\n",
       "Resolving colors.header_bg:\n",
-      "  --table-header-bg → var(--color-surface-brand)\n",
+      "  --table-surface-header → var(--color-surface-brand)\n",
       "  --color-surface-brand → var(--color-blue-500)\n",
       "  --color-blue-500 → #3C5A99\n",
       "\n",
       "Resolving colors.header_text:\n",
-      "  --table-header-text → var(--color-text-inverse)\n",
+      "  --table-text-header → var(--color-text-inverse)\n",
       "  --color-text-inverse → var(--color-white)\n",
       "  --color-white → #ffffff\n",
       "\n",
       "Resolving colors.cell_bg:\n",
-      "  --table-cell-bg → var(--color-surface-secondary)\n",
-      "  --color-surface-secondary → var(--color-gray-50)\n",
-      "  --color-gray-50 → #f8f9fa\n",
+      "  --table-surface-cell → var(--color-surface-primary)\n",
+      "  --color-surface-primary → var(--color-white)\n",
+      "  --color-white → #ffffff\n",
       "\n",
       "Resolving colors.cell_text:\n",
-      "  --table-cell-text → var(--color-text-primary)\n",
-      "  --color-text-primary → var(--color-gray-900)\n",
+      "  --table-text-cell → var(--color-text-default)\n",
+      "  --color-text-default → var(--color-gray-900)\n",
       "  --color-gray-900 → #212529\n",
       "\n",
       "Resolving colors.border:\n",
@@ -196,25 +183,23 @@
       "  --color-gray-200 → #e9ecef\n",
       "\n",
       "Resolving colors.highlight:\n",
-      "  --table-highlight-bg → var(--color-surface-secondary)\n",
+      "  --table-surface-highlight → var(--color-surface-secondary)\n",
       "  --color-surface-secondary → var(--color-gray-50)\n",
       "  --color-gray-50 → #f8f9fa\n",
       "\n",
       "Resolving colors.success:\n",
-      "  --color-status-success → var(--color-success-600)\n",
       "  --color-success-600 → #059669\n",
       "\n",
       "Resolving colors.danger:\n",
-      "  --color-status-danger → var(--color-danger-600)\n",
       "  --color-danger-600 → #dc2626\n",
       "\n",
       "Resolving colors.qtoq_bg:\n",
-      "  --table-qtoq-bg → var(--color-surface-secondary)\n",
+      "  --table-surface-alternate → var(--color-surface-secondary)\n",
       "  --color-surface-secondary → var(--color-gray-50)\n",
       "  --color-gray-50 → #f8f9fa\n",
       "\n",
       "Resolving typography.font_family:\n",
-      "  --font-family-base → Arial, -apple-system, BlinkMacSystemFont, system-ui, sans-serif\n",
+      "  --font-family-sans → Arial, -apple-system, system-ui, sans-serif\n",
       "\n",
       "Resolving typography.font_size:\n",
       "  --table-font-size → var(--font-size-sm)\n",
@@ -224,21 +209,18 @@
       "  --font-weight-semibold → 600\n",
       "\n",
       "Resolving spacing.cell_padding:\n",
-      "  --table-cell-padding-x → var(--spacing-inset-sm)\n",
-      "  --spacing-inset-sm → var(--space-2)\n",
       "  --space-2 → 0.5rem\n",
       "\n",
       "Resolving spacing.header_padding:\n",
-      "  --table-header-padding → var(--space-2) var(--space-3)\n",
       "  --space-2 → 0.5rem\n",
       "\n",
       "Resolving special_rows.top.backgroundColor:\n",
-      "  --table-highlight-bg → var(--color-surface-secondary)\n",
+      "  --table-surface-highlight → var(--color-surface-secondary)\n",
       "  --color-surface-secondary → var(--color-gray-50)\n",
       "  --color-gray-50 → #f8f9fa\n",
       "\n",
       "Resolving special_rows.market.backgroundColor:\n",
-      "  --table-highlight-bg → var(--color-surface-secondary)\n",
+      "  --table-surface-highlight → var(--color-surface-secondary)\n",
       "  --color-surface-secondary → var(--color-gray-50)\n",
       "  --color-gray-50 → #f8f9fa\n",
       "\n",
@@ -247,7 +229,7 @@
       "  \"colors\": {\n",
       "    \"header_bg\": \"#3C5A99\",\n",
       "    \"header_text\": \"#ffffff\",\n",
-      "    \"cell_bg\": \"#f8f9fa\",\n",
+      "    \"cell_bg\": \"#ffffff\",\n",
       "    \"cell_text\": \"#212529\",\n",
       "    \"border\": \"#e9ecef\",\n",
       "    \"highlight\": \"#f8f9fa\",\n",
@@ -256,7 +238,7 @@
       "    \"qtoq_bg\": \"#f8f9fa\"\n",
       "  },\n",
       "  \"typography\": {\n",
-      "    \"font_family\": \"Arial, -apple-system, BlinkMacSystemFont, system-ui, sans-serif\",\n",
+      "    \"font_family\": \"Arial, -apple-system, system-ui, sans-serif\",\n",
       "    \"font_size\": \"0.875rem\",\n",
       "    \"header_weight\": \"600\",\n",
       "    \"bold_weight\": \"bold\",\n",
@@ -264,7 +246,7 @@
       "  },\n",
       "  \"spacing\": {\n",
       "    \"cell_padding\": \"0.5rem\",\n",
-      "    \"header_padding\": \"0.5rem 0.75rem\"\n",
+      "    \"header_padding\": \"0.5rem\"\n",
       "  },\n",
       "  \"layout\": {\n",
       "    \"white_space\": \"normal\",\n",
@@ -431,26 +413,27 @@
     "if __name__ == \"__main__\":\n",
     "    TABLE_THEME = {\n",
     "        'colors': {\n",
-    "            'header_bg': 'var(--table-header-bg)',\n",
-    "            'header_text': 'var(--table-header-text)',\n",
-    "            'cell_bg': 'var(--table-cell-bg)',\n",
-    "            'cell_text': 'var(--table-cell-text)',\n",
-    "            'border': 'var(--table-border)',\n",
-    "            'highlight': 'var(--table-highlight-bg)',\n",
-    "            'success': 'var(--color-status-success)',\n",
-    "            'danger': 'var(--color-status-danger)',\n",
-    "            'qtoq_bg': 'var(--table-qtoq-bg)',\n",
+    "            'header_bg': 'var(--table-surface-header)',      # Replaced --table-header-bg\n",
+    "            'header_text': 'var(--table-text-header)',       # Replaced --table-header-text\n",
+    "            'cell_bg': 'var(--table-surface-cell)',          # Replaced --table-cell-bg\n",
+    "            'cell_text': 'var(--table-text-cell)',          # Replaced --table-cell-text\n",
+    "            'border': 'var(--table-border)',                # This one stayed the same\n",
+    "            'highlight': 'var(--table-surface-highlight)',   # Replaced --table-highlight-bg\n",
+    "            'success': 'var(--color-success-600)',       # This one stayed the same\n",
+    "            'danger': 'var(--color-danger-600)',         # This one stayed the same\n",
+    "            'qtoq_bg': 'var(--table-surface-alternate)'     # Replaced --table-qtoq-bg\n",
+    "\n",
     "        },\n",
     "        'typography': {\n",
-    "            'font_family': 'var(--font-family-base)',\n",
+    "            'font_family': 'var(--font-family-sans)',\n",
     "            'font_size': 'var(--table-font-size)',\n",
     "            'header_weight': 'var(--font-weight-semibold)',\n",
     "            'bold_weight': 'bold',\n",
     "            'normal_weight': 'normal'\n",
     "        },\n",
     "        'spacing': {\n",
-    "            'cell_padding': 'var(--table-cell-padding-x)',\n",
-    "            'header_padding': 'var(--table-header-padding)',\n",
+    "            'cell_padding': 'var(--space-2)',\n",
+    "            'header_padding': 'var(--space-2) var(--space-3)',\n",
     "        },\n",
     "        'layout': {\n",
     "            'white_space': 'normal',\n",
@@ -472,18 +455,18 @@
     "        },\n",
     "        'special_rows': {\n",
     "            'top': {\n",
-    "                'backgroundColor': 'var(--table-highlight-bg)',\n",
+    "                'backgroundColor': \"var(--table-surface-highlight)\",\n",
     "                'fontWeight': 'normal'\n",
     "            },\n",
     "            'market': {\n",
-    "                'backgroundColor': 'var(--table-highlight-bg)',\n",
+    "                'backgroundColor': \"var(--table-surface-highlight)\",\n",
     "                'fontWeight': 'bold'\n",
     "            }\n",
     "        }\n",
     "    }\n",
     "    \n",
     "    # Read CSS content from file\n",
-    "    with open('_design-tokens.css', 'r') as f:\n",
+    "    with open('_data-table.css', 'r') as f:\n",
     "        css_content = f.read()\n",
     "    \n",
     "    # Resolve all variables in the theme with debug output\n",
