--- a/application/components/css_variable_reference_tracker.ipynb
+++ b/application/components/css_variable_reference_tracker.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "2337f2ad-7007-4d57-ad38-8bfbda6d0991",
    "metadata": {},
    "outputs": [
@@ -16,59 +16,41 @@
       "--breakpoint-md: 768px\n",
       "--breakpoint-sm: 640px\n",
       "--breakpoint-xl: 1280px\n",
+      "--button-height-lg: 3rem\n",
+      "--button-height-md: 2.5rem\n",
+      "--button-height-sm: 2rem\n",
       "--color-background-primary: var(--color-white)\n",
       "--color-background-secondary: var(--color-gray-50)\n",
       "--color-background-tertiary: var(--color-gray-100)\n",
       "--color-black: #000000\n",
-      "--color-black-rgb: 0, 0, 0\n",
       "--color-blue-100: #d9e3f5\n",
-      "--color-blue-100-rgb: 217, 227, 245\n",
       "--color-blue-50: #f0f4fa\n",
-      "--color-blue-50-rgb: 240, 244, 250\n",
       "--color-blue-500: #3C5A99\n",
-      "--color-blue-500-rgb: 60, 90, 153\n",
       "--color-blue-600: #2563eb\n",
-      "--color-blue-600-rgb: 37, 99, 235\n",
       "--color-border-default: var(--color-gray-300)\n",
       "--color-border-inverse: var(--color-gray-700)\n",
       "--color-border-strong: var(--color-gray-400)\n",
       "--color-border-weak: var(--color-gray-200)\n",
       "--color-danger-50: #f8d7da\n",
-      "--color-danger-50-rgb: 248, 215, 218\n",
       "--color-danger-500: #dc3545\n",
-      "--color-danger-500-rgb: 220, 53, 69\n",
       "--color-danger-600: #dc2626\n",
-      "--color-danger-600-rgb: 220, 38, 38\n",
       "--color-gray-100: #f1f3f5\n",
-      "--color-gray-100-rgb: 241, 243, 245\n",
       "--color-gray-200: #e9ecef\n",
-      "--color-gray-200-rgb: 233, 236, 239\n",
       "--color-gray-300: #dee2e6\n",
-      "--color-gray-300-rgb: 222, 226, 230\n",
       "--color-gray-400: #ced4da\n",
-      "--color-gray-400-rgb: 206, 212, 218\n",
       "--color-gray-50: #f8f9fa\n",
-      "--color-gray-50-rgb: 248, 249, 250\n",
       "--color-gray-500: #adb5bd\n",
-      "--color-gray-500-rgb: 173, 181, 189\n",
       "--color-gray-600: #6c757d\n",
-      "--color-gray-600-rgb: 108, 117, 125\n",
       "--color-gray-700: #495057\n",
-      "--color-gray-700-rgb: 73, 80, 87\n",
       "--color-gray-800: #343a40\n",
-      "--color-gray-800-rgb: 52, 58, 64\n",
       "--color-gray-900: #212529\n",
-      "--color-gray-900-rgb: 33, 37, 41\n",
-      "--color-state-active: rgba(var(--color-gray-600-rgb), 0.2)\n",
-      "--color-state-focus: rgba(var(--color-blue-500-rgb), 0.2)\n",
-      "--color-state-hover: rgba(var(--color-gray-500-rgb), 0.1)\n",
+      "--color-state-active: rgba(108, 117, 125, 0.2)\n",
+      "--color-state-focus: rgba(60, 90, 153, 0.2)\n",
+      "--color-state-hover: rgba(173, 181, 189, 0.1)\n",
       "--color-state-selected: var(--color-blue-50)\n",
       "--color-success-50: #d4edda\n",
-      "--color-success-50-rgb: 212, 237, 218\n",
       "--color-success-500: #28a745\n",
-      "--color-success-500-rgb: 40, 167, 69\n",
       "--color-success-600: #059669\n",
-      "--color-success-600-rgb: 5, 150, 105\n",
       "--color-surface-brand: var(--color-blue-500)\n",
       "--color-surface-inverse: var(--color-gray-800)\n",
       "--color-surface-primary: var(--color-white)\n",
@@ -80,11 +62,8 @@
       "--color-text-muted: var(--color-gray-500)\n",
       "--color-text-secondary: var(--color-gray-600)\n",
       "--color-warning-50: #fff3cd\n",
-      "--color-warning-50-rgb: 255, 243, 205\n",
       "--color-warning-500: #ffd700\n",
-      "--color-warning-500-rgb: 255, 215, 0\n",
       "--color-white: #ffffff\n",
-      "--color-white-rgb: 255, 255, 255\n",
       "--container-max-width-lg: 1024px\n",
       "--container-max-width-md: 768px\n",
       "--container-max-width-sm: 640px\n",
@@ -101,23 +80,20 @@
       "--font-weight-medium: 500\n",
       "--font-weight-regular: 400\n",
       "--font-weight-semibold: 600\n",
+      "--input-height-lg: 3rem\n",
+      "--input-height-md: 2.5rem\n",
+      "--input-height-sm: 2rem\n",
       "--line-height-base: 1.5\n",
       "--line-height-relaxed: 1.75\n",
       "--line-height-tight: 1.25\n",
-      "--navbar-border: var(--color-border-inverse)\n",
       "--navbar-height: 56px\n",
-      "--navbar-surface: var(--color-surface-inverse)\n",
-      "--navbar-text: var(--color-text-inverse)\n",
       "--radius-full: 9999px\n",
       "--radius-lg: 0.5rem\n",
       "--radius-md: 0.25rem\n",
       "--radius-sm: 0.125rem\n",
-      "--shadow-lg: 0 10px 15px -3px rgb(0 0 0 / 0.1)\n",
-      "--shadow-md: 0 4px 6px -1px rgb(0 0 0 / 0.1)\n",
-      "--shadow-sm: 0 1px 2px 0 rgb(0 0 0 / 0.05)\n",
-      "--sidebar-border: var(--color-border-weak)\n",
-      "--sidebar-surface: var(--color-surface-primary)\n",
-      "--sidebar-text: var(--color-text-default)\n",
+      "--shadow-lg: 0 10px 15px -3px rgba(0, 0, 0, 0.1)\n",
+      "--shadow-md: 0 4px 6px -1px rgba(0, 0, 0, 0.1)\n",
+      "--shadow-sm: 0 1px 2px 0 rgba(0, 0, 0, 0.05)\n",
       "--sidebar-width: 400px\n",
       "--space-1: 0.25rem\n",
       "--space-2: 0.5rem\n",
@@ -126,24 +102,12 @@
       "--space-5: 1.5rem\n",
       "--space-6: 2rem\n",
       "--space-8: 3rem\n",
-      "--table-border: var(--color-border-weak)\n",
       "--table-cell-height: 2rem\n",
-      "--table-data-col-width: 5rem\n",
+      "--table-col-width-data: 5rem\n",
+      "--table-col-width-number: 4rem\n",
+      "--table-col-width-text: 12rem\n",
       "--table-font-size: var(--font-size-sm)\n",
       "--table-header-height: 2.5rem\n",
-      "--table-insurer-col-width: 12rem\n",
-      "--table-number-col-width: 4rem\n",
-      "--table-scrollbar-thumb: var(--color-gray-400)\n",
-      "--table-scrollbar-track: var(--color-gray-200)\n",
-      "--table-state-hover: var(--color-state-hover)\n",
-      "--table-state-selected: var(--color-state-selected)\n",
-      "--table-surface-alternate: var(--color-surface-secondary)\n",
-      "--table-surface-cell: var(--color-surface-primary)\n",
-      "--table-surface-header: var(--color-surface-brand)\n",
-      "--table-surface-highlight: var(--color-surface-secondary)\n",
-      "--table-text-cell: var(--color-text-default)\n",
-      "--table-text-header: var(--color-text-inverse)\n",
-      "--table-text-secondary: var(--color-text-secondary)\n",
       "--transition-duration-base: 300ms\n",
       "--transition-duration-fast: 150ms\n",
       "--transition-duration-slow: 500ms\n",
@@ -158,34 +122,22 @@
       "\n",
       "\n",
       "Resolving colors.header_bg:\n",
-      "  --table-surface-header → var(--color-surface-brand)\n",
-      "  --color-surface-brand → var(--color-blue-500)\n",
-      "  --color-blue-500 → #3C5A99\n",
+      "Warning: Could not resolve colors.header_bg: Variable not found: table-surface-header\n",
       "\n",
       "Resolving colors.header_text:\n",
-      "  --table-text-header → var(--color-text-inverse)\n",
-      "  --color-text-inverse → var(--color-white)\n",
-      "  --color-white → #ffffff\n",
+      "Warning: Could not resolve colors.header_text: Variable not found: table-text-header\n",
       "\n",
       "Resolving colors.cell_bg:\n",
-      "  --table-surface-cell → var(--color-surface-primary)\n",
-      "  --color-surface-primary → var(--color-white)\n",
-      "  --color-white → #ffffff\n",
+      "Warning: Could not resolve colors.cell_bg: Variable not found: table-surface-cell\n",
       "\n",
       "Resolving colors.cell_text:\n",
-      "  --table-text-cell → var(--color-text-default)\n",
-      "  --color-text-default → var(--color-gray-900)\n",
-      "  --color-gray-900 → #212529\n",
+      "Warning: Could not resolve colors.cell_text: Variable not found: table-text-cell\n",
       "\n",
       "Resolving colors.border:\n",
-      "  --table-border → var(--color-border-weak)\n",
-      "  --color-border-weak → var(--color-gray-200)\n",
-      "  --color-gray-200 → #e9ecef\n",
+      "Warning: Could not resolve colors.border: Variable not found: table-border\n",
       "\n",
       "Resolving colors.highlight:\n",
-      "  --table-surface-highlight → var(--color-surface-secondary)\n",
-      "  --color-surface-secondary → var(--color-gray-50)\n",
-      "  --color-gray-50 → #f8f9fa\n",
+      "Warning: Could not resolve colors.highlight: Variable not found: table-surface-highlight\n",
       "\n",
       "Resolving colors.success:\n",
       "  --color-success-600 → #059669\n",
@@ -194,9 +146,7 @@
       "  --color-danger-600 → #dc2626\n",
       "\n",
       "Resolving colors.qtoq_bg:\n",
-      "  --table-surface-alternate → var(--color-surface-secondary)\n",
-      "  --color-surface-secondary → var(--color-gray-50)\n",
-      "  --color-gray-50 → #f8f9fa\n",
+      "Warning: Could not resolve colors.qtoq_bg: Variable not found: table-surface-alternate\n",
       "\n",
       "Resolving typography.font_family:\n",
       "  --font-family-sans → Arial, -apple-system, system-ui, sans-serif\n",
@@ -215,27 +165,23 @@
       "  --space-2 → 0.5rem\n",
       "\n",
       "Resolving special_rows.top.backgroundColor:\n",
-      "  --table-surface-highlight → var(--color-surface-secondary)\n",
-      "  --color-surface-secondary → var(--color-gray-50)\n",
-      "  --color-gray-50 → #f8f9fa\n",
+      "Warning: Could not resolve special_rows.top.backgroundColor: Variable not found: table-surface-highlight\n",
       "\n",
       "Resolving special_rows.market.backgroundColor:\n",
-      "  --table-surface-highlight → var(--color-surface-secondary)\n",
-      "  --color-surface-secondary → var(--color-gray-50)\n",
-      "  --color-gray-50 → #f8f9fa\n",
+      "Warning: Could not resolve special_rows.market.backgroundColor: Variable not found: table-surface-highlight\n",
       "\n",
       "Resolved Theme:\n",
       "{\n",
       "  \"colors\": {\n",
-      "    \"header_bg\": \"#3C5A99\",\n",
-      "    \"header_text\": \"#ffffff\",\n",
-      "    \"cell_bg\": \"#ffffff\",\n",
-      "    \"cell_text\": \"#212529\",\n",
-      "    \"border\": \"#e9ecef\",\n",
-      "    \"highlight\": \"#f8f9fa\",\n",
+      "    \"header_bg\": \"var(--table-surface-header)\",\n",
+      "    \"header_text\": \"var(--table-text-header)\",\n",
+      "    \"cell_bg\": \"var(--table-surface-cell)\",\n",
+      "    \"cell_text\": \"var(--table-text-cell)\",\n",
+      "    \"border\": \"var(--table-border)\",\n",
+      "    \"highlight\": \"var(--table-surface-highlight)\",\n",
       "    \"success\": \"#059669\",\n",
       "    \"danger\": \"#dc2626\",\n",
-      "    \"qtoq_bg\": \"#f8f9fa\"\n",
+      "    \"qtoq_bg\": \"var(--table-surface-alternate)\"\n",
       "  },\n",
       "  \"typography\": {\n",
       "    \"font_family\": \"Arial, -apple-system, system-ui, sans-serif\",\n",
@@ -268,11 +214,11 @@
       "  },\n",
       "  \"special_rows\": {\n",
       "    \"top\": {\n",
-      "      \"backgroundColor\": \"#f8f9fa\",\n",
+      "      \"backgroundColor\": \"var(--table-surface-highlight)\",\n",
       "      \"fontWeight\": \"normal\"\n",
       "    },\n",
       "    \"market\": {\n",
-      "      \"backgroundColor\": \"#f8f9fa\",\n",
+      "      \"backgroundColor\": \"var(--table-surface-highlight)\",\n",
       "      \"fontWeight\": \"bold\"\n",
       "    }\n",
       "  }\n",
@@ -466,7 +412,7 @@
     "    }\n",
     "    \n",
     "    # Read CSS content from file\n",
-    "    with open('_data-table.css', 'r') as f:\n",
+    "    with open('/users/klim/desktop/project/dash-table-app/assets/styles/01_settings/_tokens.css', 'r') as f:\n",
     "        css_content = f.read()\n",
     "    \n",
     "    # Resolve all variables in the theme with debug output\n",
